<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">On Time</string>
    <string name="hello_world">Hello on time!!</string>
    <string name="whats_up">what\'s up?</string>
    <string name="action_settings">Settings</string>
    <string name="add_alarm">Add an alarm</string>
    <string name="msg">Notification!</string>

    <string name="alarmDismiss">I\'m awake</string>
    <string name="wake_up">Wake Up!</string>

    <string name="title_activity_add_alarm">Add an alarm</string>
    <string name="title_activity_wake_up_screen">Wake Up</string>
    <string name="title_activity_night">Night Mode</string>

    <string name="default_time">00:00</string>
    <string name="default_marker">AM</string>
    <string name="default_sec">00</string>
    <string name="default_date">Thu Jan 1</string>

    <string name="button_addAlarm">Add Alarm</string>
    <string name="button_setAlarm">Set Alarm</string>

    <string name="noNextAlarm">No alarm set</string>

    <string name="alarmData">alarmData</string>
    <string name="nextAlarm">nextAlarm</string>
    <string name="weatherCondition">weatherCondition</string>

    <string name="rainy">rainy</string>
    <string name="snowy">snowy</string>
    <string name="cloudy">cloudy</string>
</resources>
