<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.userinterfaces.ontime.WakeUpScreen"
    android:background="@drawable/background_gradient_wakeup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:background="#80ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20sp" android:layout_marginStart="20sp"
        android:layout_marginRight="20sp" android:layout_marginEnd="20sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        >

        <TextView
            android:id="@+id/title"
            android:text="@string/wake_up"
            android:textColor="#444444"
            android:textSize="60sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            />

        <TextView
            android:id="@+id/weatherCondition"
            android:text=""
            android:textColor="#444444"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80sp"
            />

        <Button
            android:id="@+id/imAwakeButton"
            android:text="@string/alarmDismiss"
            android:textColor="#444444"
            android:textSize="50sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="160sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30sp"
            android:layout_marginLeft="25sp" android:layout_marginStart="25sp"
            android:layout_marginRight="25sp" android:layout_marginEnd="25sp"
            />

    </RelativeLayout>


    <TextView
        android:id="@+id/theTime"
        android:text="@string/default_time"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/theDate"
        />

    <TextView
        android:id="@+id/theMarker"
        android:text="@string/default_marker"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:alpha="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/theTime" android:layout_toEndOf="@id/theTime"
        android:layout_alignBaseline="@+id/theTime"
        />

    <TextView
        android:id="@+id/theSec"
        android:text="@string/default_sec"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:alpha="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/theMarker" android:layout_alignEnd="@id/theMarker"
        android:layout_alignTop="@+id/theTime"
        android:paddingTop="25sp"
        android:paddingLeft="10sp" android:paddingStart="10sp"
        />

    <TextView
        android:id="@+id/theDate"
        android:text="@string/default_date"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:alpha="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/theMarker" android:layout_alignEnd="@id/theMarker"
        android:layout_centerVertical="true"
        />

</RelativeLayout>
